# mp4_to_notebooklm

./: .gitignore  LICENSE  README.md  initial.md  prompt.md  pyproject.toml
docs/: architecture.md  json_schema.md  notebooklm_pdf_format.md
examples/: config.example.yaml
examples/sample_output/: transcript.example.json  transcript.example.md
src/slide_scribe/: __init__.py  assign.py  cli.py  config.py  export_json.py  export_markdown.py  export_pdf.py  media.py  models.py  ocr.py  pipeline.py  slide_detect.py  transcribe.py  utils.py
tests/: test_assign.py  test_export_json.py  test_export_markdown.py  test_models.py  test_ocr.py  test_transcribe.py  test_utils.py
